modules/gdscript/tests/scripts/parser/errors/bad_f_string_3.gd
func test():
    print(f"non-expression in slot {3,4,5}")
